--- a/src/app/components/mapa/mapa-editar.component.html
+++ b/src/app/components/mapa/mapa-editar.component.html
@@ -8,6 +8,6 @@
         <mat-label>Descripción</mat-label>
         <textarea rows="3" matInput placeholder="Descripción" formControlName="desc"></textarea>
     </mat-form-field>
-    <button (click)="guardarCambios()" mat-raised-button color="primary">Editar</button>
+    <button (click)="guardarCambios()" mat-raised-button color="primary" style="margin-right:20px !important">Editar</button>
     <button (click)="onNoClick()" type="button" mat-raised-button color="warn">Cancelar</button>
 </form>  
